--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -19,11 +19,14 @@ RUN npm run build
 # Stage 2: Serve the app with Nginx
 FROM nginx:alpine
 
-# Copy the build output to Nginx's html directory
-COPY --from=build /app/build /usr/share/nginx/html
+# Remove default Nginx configuration (optional, but recommended to avoid conflicts)
+RUN rm /etc/nginx/conf.d/default.conf
 
 # Optional: Copy custom Nginx configuration
-# COPY nginx.conf /etc/nginx/nginx.conf
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Copy the build output to Nginx's html directory
+COPY --from=build /app/dist /usr/share/nginx/html
 
 # Expose port 80
 EXPOSE 80
